# pappl-retrofit

./: Makefile.am  libpappl-retrofit.pc.in
.github/workflows/: build.yml
ci/autopkgtest/: run.sh
ci/autopkgtest/debian-tests/: control  pappl-retrofit-1-dev
pappl-retrofit/: test-internal.h  test_ascii85.c  test_backend_parse.c  test_devid_match.c
